# optimized-llm-planning-memory

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
app/: main.py
app/pages/: 1_episode_browser.py  2_trajectory_viewer.py  3_compression_viewer.py  4_mcts_viewer.py  5_training_dashboard.py  6_eval_viewer.py  6_itinerary_viewer.py
app/utils/: data_loader.py
app_tests/: main.py
app_tests/pages/: 1_unit_results.py  2_module_results.py  3_system_results.py
app_tests/utils/: display.py  result_loader.py  runner.py
configs/: config.yaml
configs/agent/: react_baseline_raw.yaml  react_debug.yaml  react_default.yaml  react_mcts.yaml  react_probe.yaml  sweep_A_react.yaml  sweep_B_react.yaml  sweep_C_react.yaml  sweep_D_react.yaml  sweep_E_react.yaml  sweep_F_stateless.yaml  sweep_G_stateless.yaml
configs/compressor/: hybrid.yaml  identity.yaml  llm_mcts.yaml  llm_prompt.yaml  mcts_gat.yaml  structured_selective.yaml  transformer.yaml
configs/eval/: default.yaml
configs/logging/: default.yaml
configs/reward/: coverage_heavy.yaml  default.yaml
configs/simulator/: default.yaml
configs/training/: ppo_colab.yaml  ppo_debug.yaml  ppo_default.yaml  ppo_mcts.yaml  ppo_probe.yaml  ppo_sweep.yaml
data/few_shot_examples/: react_tool_use.json
data/rubrics/: itinerary_rubric_v1.md
docs/: AGENT.md  ARCHITECTURE.md  COLAB_GUIDE.md  COMPRESSOR.md  EFFICACY_PROBE_2.md  EFFICACY_PROBE_3.md  EVALUATION.md  PROMPT_SWEEP.md  TOOLS.md  TRAINING.md
docs/methodology/: 00_overview.md  01_agent_mcts.md  02_gat_distiller.md  03_section_cross_attention.md  04_rl_training.md
experiments/prompt_sweep_baseline/: run_sweep.py  summary_results.json
notebooks/: 01_explore_simulator.ipynb  02_trajectory_analysis.ipynb  03_training_curves.ipynb  04_ablation_results.ipynb  05_colab_rl_training.ipynb  06_evaluation.ipynb  06_evaluation_local.ipynb  06_evaluation_refactored.ipynb  07_compressor_dev.ipynb  08_human_baseline.ipynb  08_run_comparison.ipynb  09_local_debug.ipynb
scripts/: generate_user_requests.py  launch_ui.py  run_baseline_eval.py  run_episode.py  run_eval.py  run_evaluation.py  run_tests.py  run_training.py
src/optimized_llm_planning_memory/: __init__.py
test_results/: test_results_all_all_20260424T201648.json  test_results_latest.json  test_results_unit_core_20260424T201633.json
tests/: conftest.py
tests/module/: conftest.py  test_ablation_module.py  test_agent_module.py  test_compressor_module.py  test_core_module.py  test_evaluation_module.py  test_mcts_module.py  test_simulator_module.py  test_tools_module.py  test_training_module.py  test_utils_module.py
tests/system/: conftest.py  test_evaluation_pipeline_system.py  test_full_episode_system.py  test_rl_lite_system.py
tests/test_agent/: test_react_agent.py
tests/test_compressor/: test_comprehensive.py  test_dummy_compressor.py  test_interface_contract.py  test_template.py
tests/test_core/: test_config_loading.py  test_constraint_engine_unit.py  test_constraints.py
tests/test_evaluation/: test_deterministic.py  test_scripted_baseline_diagnosis.py
tests/test_integration/: mock_simulator.py  test_eval_pipeline.py
(+277 files in other folders)
